Fix text inside digram being incorrectly aligned vertically on Firefox

--- a/app/view/app.less
+++ b/app/view/app.less
@@ -418,6 +418,7 @@ main {
             // The letter spacing was manually adjusted until the grid and
             // text is perfectly aligned
             letter-spacing: -0.038em;
+            white-space: normal;
         }
     }
 
